testdata/invalid/fncall_invalid_03.lisp
;;error:3:1-20:unknown function "f"
(defcolumns (X :i16) (Y :i8))
(defcall (Y) f (X))
